WEB | redirect to home when clicking the Logo name and icon

--- a/projects/web/templates/components/NavBar.html.twig
+++ b/projects/web/templates/components/NavBar.html.twig
@@ -3,9 +3,9 @@
 		<div class="flex justify-between h-16">
 			<div class="flex items-center">
 				<div class="flex-shrink-0">
-					<h1 class="text-xl sm:text-2xl font-bold text-blue-600">
+					<a href="{{path('app_home')}}" class="text-xl sm:text-2xl font-bold text-blue-600 hover:text-blue-700 transition-colors">
 						{% include 'components/Icon.html.twig' with {name: 'paw', size: 24, class: 'inline mr-2'} %}PetFinder
-					</h1>
+					</a>
 				</div>
 			</div>
 
