--- a/projects/web/templates/lost_pets/index.html.twig
+++ b/projects/web/templates/lost_pets/index.html.twig
@@ -85,12 +85,12 @@
 							</a>
 						</div>
 					</div>
-					
+
 					{# Under Protection Filter #}
 					<div class="flex items-center gap-4 mt-3">
 						<label class="flex items-center group cursor-pointer">
 							<div class="relative">
-								<input type="checkbox" name="underProtection" value="only" 
+								<input type="checkbox" name="underProtection" value="only"
 									{{ filters.underProtection == 'only' ? 'checked' : '' }}
 									class="sr-only peer">
 								<div class="w-4 h-4 border-2 border-gray-300 rounded peer-checked:border-purple-600 peer-checked:bg-purple-600 flex items-center justify-center transition-all duration-200 group-hover:border-purple-400">
@@ -136,7 +136,7 @@
 			 data-infinite-scroll-target="container"
 			 data-filters-target="container">
 			{% if lostPets is not empty %}
-				{% include 'lost_pets/_lost_animals_list.html.twig' with {'lostPets': lostPets} %}
+				{% include 'lost_pets/_lost_animals_list.html.twig' with {'lostPets': lostPets, 'filters': filters} %}
 			{% else %}
 				{# No pets found message #}
 				<div class="col-span-full text-center py-12">
