--- a/projects/web/templates/auth/login.html.twig
+++ b/projects/web/templates/auth/login.html.twig
@@ -6,6 +6,10 @@
 	{{ parent() }}
 {% endblock %}
 
+{% block javascripts %}
+	{{ parent() }}
+{% endblock %}
+
 {% block body %}
 
 	<div class="max-w-lg mx-auto mt-8 p-8 bg-white rounded-lg shadow-lg">
@@ -61,9 +65,15 @@
 				<label for="password" class="block text-sm font-medium text-gray-700 mb-3">
 					<i class="fas fa-lock mr-1"></i>{{ 'auth.login.password'|trans }}
 				</label>
-				<input type="password" name="_password" id="password"
-					   placeholder="{{ 'auth.login.password_placeholder'|trans }}" required
-					   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200">
+				<div class="relative" data-controller="password-toggle">
+					<input type="password" name="_password" id="password"
+						   placeholder="{{ 'auth.login.password_placeholder'|trans }}" required
+						   data-password-toggle-target="input"
+						   class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200">
+					<button type="button" data-action="click->password-toggle#toggle" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600 transition-colors duration-200">
+						<i class="fas fa-eye" data-password-toggle-target="icon"></i>
+					</button>
+				</div>
 			</div>
 
 			<div class="flex items-center justify-end mb-8">
